add icon for java in mac, add notifications for mac